tree-sitter-http/test/corpus/request_line.txt
=================================================================
request-line without a version, CRLF terminated
=================================================================
GET /

---

(source_file
  (request_line
    method: (method)
    target: (request_target)))

=================================================================
request-line without a version, LF terminated
=================================================================
GET /

---

(source_file
  (request_line
    method: (method)
    target: (request_target)))

=================================================================
request-line with an HTTP version
=================================================================
GET / HTTP/1.1

---

(source_file
  (request_line
    method: (method)
    target: (request_target)
    version: (http_version
      major: (digit)
      minor: (digit))))

=================================================================
origin-form target with a query string
=================================================================
GET /a/b?x=1&y=2 HTTP/1.1

---

(source_file
  (request_line
    method: (method)
    target: (request_target)
    version: (http_version
      major: (digit)
      minor: (digit))))

=================================================================
asterisk-form target
=================================================================
OPTIONS * HTTP/1.1

---

(source_file
  (request_line
    method: (method)
    target: (request_target)
    version: (http_version
      major: (digit)
      minor: (digit))))

=================================================================
absolute-form target
=================================================================
GET http://example.com/path HTTP/1.1

---

(source_file
  (request_line
    method: (method)
    target: (request_target)
    version: (http_version
      major: (digit)
      minor: (digit))))

=================================================================
method token with non-alphabetic tchars
=================================================================
M-SEARCH * HTTP/1.1

---

(source_file
  (request_line
    method: (method)
    target: (request_target)
    version: (http_version
      major: (digit)
      minor: (digit))))

=================================================================
single-digit major/minor version numbers, including zero
=================================================================
GET / HTTP/0.9

---

(source_file
  (request_line
    method: (method)
    target: (request_target)
    version: (http_version
      major: (digit)
      minor: (digit))))

=================================================================
missing SP between method and target is an error
:error
=================================================================
GET/ HTTP/1.1

---


=================================================================
two-digit HTTP version is an error (major/minor are single digit only)
:error
=================================================================
GET / HTTP/10.1

---


=================================================================
content after the request-line's line ending is an error
:error
=================================================================
GET /


---

